// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > ddl/column-constraints.sql 1`] = `
"create table orders (
  id integer primary key,
  customer_id integer not null,
  status text default 'pending',
  code text unique,
  amount numeric(10, 2) not null
);

create table products (
  id integer primary key,
  price numeric(10, 2) check (price > 0),
  quantity integer check (quantity >= 0)
);

create table order_items (
  id integer primary key,
  order_id integer references orders (id) on delete cascade,
  product_id integer references products (id) on update restrict
);

create table order_items2 (
  id integer,
  order_id integer,
  primary key (id),
  foreign key (order_id) references orders (id)
);

create table employees (
  id integer,
  salary numeric(10, 2),
  constraint employees_pkey primary key (id),
  constraint salary_positive check (salary > 0)
);

create table sales (
  id integer primary key,
  quantity integer not null,
  unit_price numeric(10, 2) not null,
  total numeric generated always as (quantity * unit_price) stored
);

create table seq_test (
  id integer generated always as identity,
  name text
);
"
`;

exports[`fixtures > ddl/column-types.sql 1`] = `
"create table products (
  name varchar(100),
  description text,
  price numeric(10, 2),
  quantity integer,
  tags text[],
  created_at timestamptz
);
"
`;

exports[`fixtures > ddl/create-function.sql 1`] = `
"create function get_book_count(p_author_id integer)
returns bigint
language sql
as $$
  select count(*) from books where author_id = p_author_id
$$;

create function full_name(first_name text, last_name text)
returns text
language sql
as $$
  select first_name || ' ' || last_name
$$;
"
`;

exports[`fixtures > delete/returning.sql 1`] = `
"delete from sessions
where expires_at < now()
returning
  id,
  user_id;
"
`;

exports[`fixtures > dml/call.sql 1`] = `
"call process_orders();

call update_inventory(product_id => 42, delta => -5);

call send_notification(1, 'hello', true);
"
`;

exports[`fixtures > dml/cte-dml.sql 1`] = `
"with
  moved as (
    delete from orders
    where status = 'cancelled'
    returning
      id,
      customer_id,
      amount
  )
insert into archived_orders (id, customer_id, amount)
select
  id,
  customer_id,
  amount
from
  moved;

delete from sessions
where (
  select
    id
  from
    updated
);
"
`;

exports[`fixtures > dml/do.sql 1`] = `
"do $$
BEGIN
  RAISE NOTICE 'hello world';
END
$$
language plpgsql;

do $$
  insert into audit_log (action) values ('startup')
$$
language sql;
"
`;

exports[`fixtures > dml/merge.sql 1`] = `
"merge into target as t
using source as s
on t.id = s.id
when matched then
  update set
    name = s.name,
    updated_at = now()
when not matched then
  insert (id, name, created_at)
  values (s.id, s.name, now());

merge into inventory as inv
using incoming as inc
on inv.product_id = inc.product_id
when matched and inc.quantity = 0 then
  delete
when matched then
  update set
    quantity = inv.quantity + inc.quantity
when not matched then
  insert (product_id, quantity)
  values (inc.product_id, inc.quantity);

merge into employees as e
using new_roster as nr
on e.id = nr.id
when matched then
  update set
    name = nr.name
when not matched then
  insert (id, name)
  values (nr.id, nr.name)
when not matched by source then
  delete;
"
`;

exports[`fixtures > dml/transaction.sql 1`] = `
"begin;

commit;

rollback;

savepoint sp1;

release savepoint sp1;

rollback to savepoint sp1;

set transaction isolation level serializable;

set transaction read only;

set transaction read write, deferrable;

begin isolation level read committed;

begin read only;

prepare transaction 'txn-1234';

commit prepared 'txn-1234';

rollback prepared 'txn-1234';
"
`;

exports[`fixtures > dml/truncate.sql 1`] = `
"truncate table sessions;

truncate table sessions, temp_orders restart identity cascade;
"
`;

exports[`fixtures > insert/default-values.sql 1`] = `
"insert into logs
default values;

insert into logs
default values
returning
  id,
  created_at;
"
`;

exports[`fixtures > insert/on_conflict.sql 1`] = `
"insert into users (id, email)
values (1, 'alice@example.com')
on conflict do nothing;

insert into users (id, email, updated_at)
values (1, 'alice@example.com', now())
on conflict (id) do update
set
  email = excluded.email,
  updated_at = excluded.updated_at;
"
`;

exports[`fixtures > insert/returning.sql 1`] = `
"insert into users (name, email)
values ('Alice', 'alice@example.com')
returning
  id;

insert into orders (customer_id, amount)
values (42, 150.00)
returning
  id,
  created_at;
"
`;

exports[`fixtures > insert/values.sql 1`] = `
"insert into orders (customer_id, total)
values (1, 99.99);

insert into products (name, price, category)
values
  ('Widget', 9.99, 'tools'),
  ('Gadget', 19.99, 'electronics'),
  ('Doohickey', 4.99, 'misc');
"
`;

exports[`fixtures > select/advanced.sql 1`] = `
"select
  interval '1 day',
  interval '2 hours 30 minutes'
from
  t;

select
  price::numeric,
  name::text,
  '2024-01-01'::date
from
  t;

select
  arr[1],
  arr[2:4],
  arr[:3],
  arr[1:]
from
  t;

select
  make_date(year => 2024, month => 1, day => 15);

select
  dept,
  sum(salary)
from
  emp
group by
  rollup(dept);

select
  dept,
  job,
  sum(salary)
from
  emp
group by
  cube(dept, job);

select
  dept,
  job,
  sum(salary)
from
  emp
group by
  grouping sets((dept, job), (dept), ());
"
`;

exports[`fixtures > select/aggregate-filter.sql 1`] = `
"select
  author_id,
  count(*) filter (where in_stock = 1) as in_stock_count,
  count(*) filter (where in_stock = 0) as out_of_stock_count
from
  books
group by
  author_id;

select
  author_id,
  string_agg(title, ', ' order by title) as titles
from
  books
group by
  author_id;
"
`;

exports[`fixtures > select/basic.sql 1`] = `
"select
  id,
  title,
  price
from
  books
where in_stock = true
order by
  price asc;

select
  b.id,
  b.title,
  a.first_name,
  a.last_name
from
  books as b
  join authors as a on b.author_id = a.id
where b.price < 50;
"
`;

exports[`fixtures > select/distinct-on.sql 1`] = `
"select distinct on (author_id)
  id,
  author_id,
  title
from
  books
order by
  author_id,
  price asc;
"
`;

exports[`fixtures > select/for-update.sql 1`] = `
"select
  id,
  title
from
  books
where id = 1
for update;

select
  id,
  title
from
  books
for share skip locked;

select
  id
from
  orders
for no key update of orders nowait;
"
`;

exports[`fixtures > select/functions.sql 1`] = `
"select
  substring(title from 'pg.*')
from
  books;

select
  substring(title from 1 for 5)
from
  books;

select
  extract(year from created_at),
  extract(month from created_at),
  extract(day from created_at)
from
  orders;

select
  trim(leading ' ' from name),
  trim(trailing ' ' from name),
  trim(both ' ' from name)
from
  users;

select
  trim(name),
  ltrim(name),
  rtrim(name)
from
  users;

select
  position('.' in email)
from
  users;

select
  created_at at time zone 'UTC',
  updated_at at time zone 'America/New_York'
from
  events;

select
  overlay(name placing 'XXX' from 2 for 3)
from
  users;

select
  current_date,
  current_timestamp,
  current_time
from
  t;

select
  localtime,
  localtimestamp,
  current_user,
  session_user
from
  t;

select
  upper(name),
  lower(email),
  length(title)
from
  books;

select
  coalesce(price, 0.00),
  nullif(status, 'deleted')
from
  products;

select
  greatest(a, b, c),
  least(x, y)
from
  scores;

select
  date_trunc('month', created_at)
from
  orders;

select
  now(),
  to_char(price, 'FM999.00'),
  to_timestamp(epoch)
from
  t;

select
  regexp_replace(name, '\\s+', ' ', 'g')
from
  users;
"
`;

exports[`fixtures > select/in-between.sql 1`] = `
"select
  id,
  title
from
  books
where id in (1, 2, 3);

select
  id,
  title
from
  books
where id not in (1, 2, 3);

select
  id,
  title,
  price
from
  books
where price between 10 and 50;

select
  id,
  title,
  price
from
  books
where price not between 10 and 50;
"
`;

exports[`fixtures > select/lateral.sql 1`] = `
"select
  b.id,
  r.avg_price
from
  books as b,
  lateral (
    select
      avg(price) as avg_price
    from
      books
    where author_id = b.author_id
  ) as r;
"
`;

exports[`fixtures > select/like.sql 1`] = `
"select
  id,
  title
from
  books
where title LIKE 'The%';

select
  id,
  title
from
  books
where title NOT LIKE 'The%';

select
  id,
  email
from
  users
where email ILIKE '%@example.com';

select
  id,
  email
from
  users
where email NOT ILIKE '%@example.com';
"
`;

exports[`fixtures > select/set_ops.sql 1`] = `
"select
  id,
  name
from
  customers
union
select
  id,
  name
from
  prospects;

select
  product_id
from
  orders
intersect
select
  product_id
from
  featured_products;

select
  user_id
from
  premium_users
except
select
  user_id
from
  suspended_users;

select
  id,
  name
from
  table_a
union all
select
  id,
  name
from
  table_b;
"
`;

exports[`fixtures > select/window.sql 1`] = `
"select
  id,
  author_id,
  price,
  row_number() over (partition by author_id order by price desc) as rank
from
  books;

select
  id,
  price,
  sum(price) over (order by id rows between unbounded preceding and current row) as running_total
from
  books;

select
  id,
  author_id,
  price,
  rank() over (partition by author_id order by price desc) as price_rank,
  avg(price) over (partition by author_id) as avg_price
from
  books;
"
`;

exports[`fixtures > update/returning.sql 1`] = `
"update users
set active = false
where last_login < now() - interval '1 year'
returning
  id,
  email;
"
`;

exports[`shared fixtures > dml/delete.sql 1`] = `
"delete from books
where
  in_stock = 0
  and price < 5;
"
`;

exports[`shared fixtures > dml/insert.sql 1`] = `
"insert into books (title, author_id, price, in_stock)
values ('The Pragmatic Programmer', 1, 39.99, 1);
"
`;

exports[`shared fixtures > dml/update.sql 1`] = `
"update books
set
  price = price * 0.9,
  in_stock = 1
where
  author_id = 1
  and price > 20;
"
`;

exports[`shared fixtures > select/aggregates.sql 1`] = `
"select
  author_id,
  count(*) as book_count,
  avg(price) as avg_price
from
  books
where in_stock = 1
group by
  author_id
having count(*) > 5
order by
  book_count desc;
"
`;

exports[`shared fixtures > select/basic.sql 1`] = `
"select
  id,
  title,
  price
from
  books
where in_stock = 1
order by
  price asc;

select
  id,
  title,
  price
from
  books
where
  in_stock = 1
  and price < 50
order by
  price desc;
"
`;

exports[`shared fixtures > select/case.sql 1`] = `
"select
  id,
  case
    when price < 10 then 'Budget'
    when price < 30 then 'Mid'
  else 'Premium'
  end as tier
from
  books;

select
  id,
  case genre_id
    when 1 then 'Fiction'
    when 2 then 'Non-Fiction'
  else 'Other'
  end as genre
from
  books;
"
`;

exports[`shared fixtures > select/cte.sql 1`] = `
"with
  top_authors as (
    select
      author_id,
      count(*) as book_count
    from
      books
    group by
      author_id
    having count(*) > 5
  )
select
  a.first_name,
  a.last_name,
  t.book_count
from
  authors as a
  join top_authors as t on a.id = t.author_id
order by
  t.book_count desc;
"
`;

exports[`shared fixtures > select/joins.sql 1`] = `
"select
  b.id,
  b.title,
  a.first_name,
  a.last_name
from
  books as b
  join authors as a on b.author_id = a.id;

select
  b.title,
  a.first_name
from
  books as b
  left join authors as a on b.author_id = a.id
where a.id is null;

select
  b.title,
  a.first_name
from
  books as b
  full join authors as a on b.author_id = a.id;
"
`;

exports[`shared fixtures > select/subqueries.sql 1`] = `
"select
  id,
  title
from
  books
where (
  select
    id
  from
    authors
  where country = 'USA'
);

select
  id,
  title
from
  books
where exists (
  select
    1
  from
    order_items
  where order_items.book_id = books.id
);

select
  id,
  title
from
  books
where
  not (
    select
      author_id
    from
      banned_authors
  );
"
`;
